// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: IconPicker ui no results 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="asdlfjalsdjflajsdlf" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <ContentState
              mode="no-results"
              subTitle="No icons were found, please try again with a different query."
              title="No icons found"
            />
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [],
                  "first": true,
                  "last": true,
                  "number": 1,
                  "numberOfElements": 0,
                  "size": 0,
                  "totalElements": 0,
                  "totalPages": 1,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;

exports[`Component: IconPicker ui with selected value 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <div
      className="d-flex justify-content-between"
    >
      <Icon
        className="pt-2 mr-3"
        icon="3d_rotation"
        id="icon-picker-value"
      />
      <TextButton
        className="mr-3"
        onClick={[Function]}
      >
        Clear
      </TextButton>
    </div>
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <span
              className="d-inline-block"
              key="10k"
            >
              <Tooltip
                content="10k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="10k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="10mp"
            >
              <Tooltip
                content="10mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="10mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="11mp"
            >
              <Tooltip
                content="11mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="11mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="123"
            >
              <Tooltip
                content="123"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="123"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="12mp"
            >
              <Tooltip
                content="12mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="12mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="13mp"
            >
              <Tooltip
                content="13mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="13mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="14mp"
            >
              <Tooltip
                content="14mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="14mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="15mp"
            >
              <Tooltip
                content="15mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="15mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="16mp"
            >
              <Tooltip
                content="16mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="16mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="17mp"
            >
              <Tooltip
                content="17mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="17mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="18mp"
            >
              <Tooltip
                content="18mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="18mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="19mp"
            >
              <Tooltip
                content="19mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="19mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1k"
            >
              <Tooltip
                content="1k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1k_plus"
            >
              <Tooltip
                content="1k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1x_mobiledata"
            >
              <Tooltip
                content="1x_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1x_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="20mp"
            >
              <Tooltip
                content="20mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="20mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="21mp"
            >
              <Tooltip
                content="21mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="21mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="22mp"
            >
              <Tooltip
                content="22mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="22mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="23mp"
            >
              <Tooltip
                content="23mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="23mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="24mp"
            >
              <Tooltip
                content="24mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="24mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2k"
            >
              <Tooltip
                content="2k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2k_plus"
            >
              <Tooltip
                content="2k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2mp"
            >
              <Tooltip
                content="2mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="30fps"
            >
              <Tooltip
                content="30fps"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="30fps"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="30fps_select"
            >
              <Tooltip
                content="30fps_select"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="30fps_select"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="360"
            >
              <Tooltip
                content="360"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="360"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3d_rotation"
            >
              <Tooltip
                content="3d_rotation"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3d_rotation"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3g_mobiledata"
            >
              <Tooltip
                content="3g_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3g_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3k"
            >
              <Tooltip
                content="3k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3k_plus"
            >
              <Tooltip
                content="3k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3mp"
            >
              <Tooltip
                content="3mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3p"
            >
              <Tooltip
                content="3p"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3p"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4g_mobiledata"
            >
              <Tooltip
                content="4g_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4g_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4g_plus_mobiledata"
            >
              <Tooltip
                content="4g_plus_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4g_plus_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4k"
            >
              <Tooltip
                content="4k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4k_plus"
            >
              <Tooltip
                content="4k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [
                    "10k",
                    "10mp",
                    "11mp",
                    "123",
                    "12mp",
                    "13mp",
                    "14mp",
                    "15mp",
                    "16mp",
                    "17mp",
                    "18mp",
                    "19mp",
                    "1k",
                    "1k_plus",
                    "1x_mobiledata",
                    "20mp",
                    "21mp",
                    "22mp",
                    "23mp",
                    "24mp",
                    "2k",
                    "2k_plus",
                    "2mp",
                    "30fps",
                    "30fps_select",
                    "360",
                    "3d_rotation",
                    "3g_mobiledata",
                    "3k",
                    "3k_plus",
                    "3mp",
                    "3p",
                    "4g_mobiledata",
                    "4g_plus_mobiledata",
                    "4k",
                    "4k_plus",
                  ],
                  "first": true,
                  "last": false,
                  "number": 1,
                  "numberOfElements": 36,
                  "size": 36,
                  "totalElements": 2007,
                  "totalPages": 56,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;

exports[`Component: IconPicker ui without label 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <div
    className="d-flex"
  >
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <span
              className="d-inline-block"
              key="10k"
            >
              <Tooltip
                content="10k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="10k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="10mp"
            >
              <Tooltip
                content="10mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="10mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="11mp"
            >
              <Tooltip
                content="11mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="11mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="123"
            >
              <Tooltip
                content="123"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="123"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="12mp"
            >
              <Tooltip
                content="12mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="12mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="13mp"
            >
              <Tooltip
                content="13mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="13mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="14mp"
            >
              <Tooltip
                content="14mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="14mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="15mp"
            >
              <Tooltip
                content="15mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="15mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="16mp"
            >
              <Tooltip
                content="16mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="16mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="17mp"
            >
              <Tooltip
                content="17mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="17mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="18mp"
            >
              <Tooltip
                content="18mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="18mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="19mp"
            >
              <Tooltip
                content="19mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="19mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1k"
            >
              <Tooltip
                content="1k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1k_plus"
            >
              <Tooltip
                content="1k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1x_mobiledata"
            >
              <Tooltip
                content="1x_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1x_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="20mp"
            >
              <Tooltip
                content="20mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="20mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="21mp"
            >
              <Tooltip
                content="21mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="21mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="22mp"
            >
              <Tooltip
                content="22mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="22mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="23mp"
            >
              <Tooltip
                content="23mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="23mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="24mp"
            >
              <Tooltip
                content="24mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="24mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2k"
            >
              <Tooltip
                content="2k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2k_plus"
            >
              <Tooltip
                content="2k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2mp"
            >
              <Tooltip
                content="2mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="30fps"
            >
              <Tooltip
                content="30fps"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="30fps"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="30fps_select"
            >
              <Tooltip
                content="30fps_select"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="30fps_select"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="360"
            >
              <Tooltip
                content="360"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="360"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3d_rotation"
            >
              <Tooltip
                content="3d_rotation"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3d_rotation"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3g_mobiledata"
            >
              <Tooltip
                content="3g_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3g_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3k"
            >
              <Tooltip
                content="3k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3k_plus"
            >
              <Tooltip
                content="3k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3mp"
            >
              <Tooltip
                content="3mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3p"
            >
              <Tooltip
                content="3p"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3p"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4g_mobiledata"
            >
              <Tooltip
                content="4g_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4g_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4g_plus_mobiledata"
            >
              <Tooltip
                content="4g_plus_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4g_plus_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4k"
            >
              <Tooltip
                content="4k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4k_plus"
            >
              <Tooltip
                content="4k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [
                    "10k",
                    "10mp",
                    "11mp",
                    "123",
                    "12mp",
                    "13mp",
                    "14mp",
                    "15mp",
                    "16mp",
                    "17mp",
                    "18mp",
                    "19mp",
                    "1k",
                    "1k_plus",
                    "1x_mobiledata",
                    "20mp",
                    "21mp",
                    "22mp",
                    "23mp",
                    "24mp",
                    "2k",
                    "2k_plus",
                    "2mp",
                    "30fps",
                    "30fps_select",
                    "360",
                    "3d_rotation",
                    "3g_mobiledata",
                    "3k",
                    "3k_plus",
                    "3mp",
                    "3p",
                    "4g_mobiledata",
                    "4g_plus_mobiledata",
                    "4k",
                    "4k_plus",
                  ],
                  "first": true,
                  "last": false,
                  "number": 1,
                  "numberOfElements": 36,
                  "size": 36,
                  "totalElements": 2007,
                  "totalPages": 56,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;

exports[`Component: IconPicker ui without selected value 1`] = `
<div
  className="icon-picker form-group"
  color="success"
>
  <Label
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best Friend
  </Label>
  <div
    className="d-flex"
  >
    <Popover
      isOpen={false}
      placement="bottom"
      target={
        <Button
          color="primary"
          onClick={[Function]}
          tag="button"
          type="button"
        >
          Select your best friend
        </Button>
      }
    >
      <Card
        tag="div"
      >
        <CardHeader
          tag="div"
        >
          &lt;SearchInput defaultValue="" onChange={[Function: onSearch]} debounce={0}&gt;
  [function]
&lt;/SearchInput&gt;
        </CardHeader>
        <CardBody
          tag="div"
        >
          <div
            style={
              Object {
                "height": 250,
                "width": 250,
              }
            }
          >
            <span
              className="d-inline-block"
              key="10k"
            >
              <Tooltip
                content="10k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="10k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="10mp"
            >
              <Tooltip
                content="10mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="10mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="11mp"
            >
              <Tooltip
                content="11mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="11mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="123"
            >
              <Tooltip
                content="123"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="123"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="12mp"
            >
              <Tooltip
                content="12mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="12mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="13mp"
            >
              <Tooltip
                content="13mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="13mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="14mp"
            >
              <Tooltip
                content="14mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="14mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="15mp"
            >
              <Tooltip
                content="15mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="15mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="16mp"
            >
              <Tooltip
                content="16mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="16mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="17mp"
            >
              <Tooltip
                content="17mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="17mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="18mp"
            >
              <Tooltip
                content="18mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="18mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="19mp"
            >
              <Tooltip
                content="19mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="19mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1k"
            >
              <Tooltip
                content="1k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1k_plus"
            >
              <Tooltip
                content="1k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="1x_mobiledata"
            >
              <Tooltip
                content="1x_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="1x_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="20mp"
            >
              <Tooltip
                content="20mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="20mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="21mp"
            >
              <Tooltip
                content="21mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="21mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="22mp"
            >
              <Tooltip
                content="22mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="22mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="23mp"
            >
              <Tooltip
                content="23mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="23mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="24mp"
            >
              <Tooltip
                content="24mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="24mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2k"
            >
              <Tooltip
                content="2k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2k_plus"
            >
              <Tooltip
                content="2k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="2mp"
            >
              <Tooltip
                content="2mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="2mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="30fps"
            >
              <Tooltip
                content="30fps"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="30fps"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="30fps_select"
            >
              <Tooltip
                content="30fps_select"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="30fps_select"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="360"
            >
              <Tooltip
                content="360"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="360"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3d_rotation"
            >
              <Tooltip
                content="3d_rotation"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3d_rotation"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3g_mobiledata"
            >
              <Tooltip
                content="3g_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3g_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3k"
            >
              <Tooltip
                content="3k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3k_plus"
            >
              <Tooltip
                content="3k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3mp"
            >
              <Tooltip
                content="3mp"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3mp"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="3p"
            >
              <Tooltip
                content="3p"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="3p"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4g_mobiledata"
            >
              <Tooltip
                content="4g_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4g_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4g_plus_mobiledata"
            >
              <Tooltip
                content="4g_plus_mobiledata"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4g_plus_mobiledata"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4k"
            >
              <Tooltip
                content="4k"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4k"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
            <span
              className="d-inline-block"
              key="4k_plus"
            >
              <Tooltip
                content="4k_plus"
                distance={18}
                placement="top"
              >
                <Icon
                  className="m-2"
                  icon="4k_plus"
                  onClick={[Function]}
                />
              </Tooltip>
            </span>
          </div>
          <div
            className="my-2 text-center"
          >
            <Pager
              onChange={[Function]}
              page={
                Object {
                  "content": Array [
                    "10k",
                    "10mp",
                    "11mp",
                    "123",
                    "12mp",
                    "13mp",
                    "14mp",
                    "15mp",
                    "16mp",
                    "17mp",
                    "18mp",
                    "19mp",
                    "1k",
                    "1k_plus",
                    "1x_mobiledata",
                    "20mp",
                    "21mp",
                    "22mp",
                    "23mp",
                    "24mp",
                    "2k",
                    "2k_plus",
                    "2mp",
                    "30fps",
                    "30fps_select",
                    "360",
                    "3d_rotation",
                    "3g_mobiledata",
                    "3k",
                    "3k_plus",
                    "3mp",
                    "3p",
                    "4g_mobiledata",
                    "4g_plus_mobiledata",
                    "4k",
                    "4k_plus",
                  ],
                  "first": true,
                  "last": false,
                  "number": 1,
                  "numberOfElements": 36,
                  "size": 36,
                  "totalElements": 2007,
                  "totalPages": 56,
                }
              }
            />
          </div>
        </CardBody>
      </Card>
    </Popover>
  </div>
  Some error
</div>
`;
